--- a/chinese-cheese.css
+++ b/chinese-cheese.css
@@ -1,6 +1,6 @@
 #CheckerboardWrapper {
-    width: 860px;
-    height: 960px;
+    width: 900px;
+    height: 1000px;
     margin: 0px;
     background-color: #e0be88;
     overflow: hidden;
@@ -8,7 +8,7 @@
 }
 #Checkerboard {
     display: grid;
-    margin: 30px;
+    margin: 50px;
     grid-template-columns: repeat(8, 100px);
     grid-template-rows: repeat(9, 100px);
     border-right: 1px solid #000;
@@ -20,6 +20,12 @@
     position: relative;
     text-align: center;
     line-height: 100px;
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+}
+.divider {
+    grid-column-start: 1;
+    grid-column-end: 9;
     border-top: 1px solid #000;
     border-left: 1px solid #000;
 }
@@ -72,4 +78,48 @@
     right: 5%;
     border-right: 3px solid #000;
     border-top: 3px solid #000;
+}
+@font-face {
+    font-family: cheese;
+    src: url(./fonts/cheese.ttf);
+}
+.chessman {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 80px;
+    font-weight: bold;
+    font-family: cheese;
+    font-size: 38px;
+    outline-offset: 5px;
+}
+.chessman::after {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    content: '';
+    display: block;
+    width: 74px;
+    height: 74px;
+    border-radius: 50%;
+}
+.chessman[group=black] {
+    left: -43px;
+    top: -40px;
+    columns: #000;
+    border: 4px solid #000;
+}
+.chessman[group=black]::after {
+    border: 1px solid #000;
+}
+.chessman[group=red] {
+    right: -43px;
+    bottom: -40px;
+    color: red;
+    border: 4px solid red;
+}
+.chessman[group=red]::after {
+    border: 1px solid red;
 }
