棋盘初始化

--- a/src/styles/chessman.scss
+++ b/src/styles/chessman.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: cheese;
-    src: url(./fonts/cheese.ttf);
+    src: url(../fonts/cheese.ttf);
 }
 .chessman {
     position: absolute;
