fix: 1、原地落子，棋子消失 2、楚河汉界落子失效

--- a/src/styles/checkerponits.less
+++ b/src/styles/checkerponits.less
@@ -94,33 +94,34 @@
 }
 .pointer-black {
     position: absolute;
-    width: 1px;
-    height: 1px;
-    left: 0px;
-    top: 0px;
+    z-index: 9999;
+    width: 50px;
+    height: 50px;
+    left: -25px;
+    top: -25px;
 }
 .pointer-red {
     position: absolute;
-    width: 1px;
-    height: 1px;
-    bottom: 0px;
-    left: 0px;
+    z-index: 9999;
+    width: 50px;
+    height: 50px;
+    bottom: -25px;
+    left: -25px;
 }
 .pointer-black.last {
     right: 0px;
-    left: 99px;
+    left: 72px;
 }
 .pointer-red.last {
     right: 0px;
-    left: 99px;
+    left: 72px;
 }
 .pointer-bottom {
-    top: 0px;
-    bottom: 99px;
+    top: -25px;
 }
 .pointer-top {
     bottom: 0px;
-    top: 99px;
+    top: 75px;
 }
 .banner-left {
     position: absolute;
