chore: 组件拆分，引入react-redux依赖

--- a/src/styles/chessman.less
+++ b/src/styles/chessman.less
@@ -1,7 +1,5 @@
-@font-face {
-    font-family: cheese;
-    src: url(../fonts/cheese.ttf);
-}
+@import url(./base.less);
+
 .chessman {
     position: absolute;
     width: 80px;
