--- a/src/styles/checkerboard.less
+++ b/src/styles/checkerboard.less
@@ -1,7 +1,5 @@
-@font-face {
-    font-family: cheese;
-    src: url(../fonts/cheese.ttf);
-}
+@import url(./base.less);
+
 #CheckerboardWrapper {
     width: 900px;
     height: 1000px;
@@ -91,44 +89,6 @@
     right: 5%;
     border-right: 3px solid #000;
     border-top: 3px solid #000;
-}
-.pointer-black {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    // width: 10px;
-    // height: 10px;
-    // background-color: black;
-    // border-radius: 50%;
-    left: 0px;
-    top: 0px;
-}
-.pointer-red {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    // width: 10px;
-    // height: 10px;
-    // background-color: red;
-    // border-radius: 50%;
-    bottom: 0px;
-    left: 0px;
-}
-.pointer-black.last {
-    right: 0px;
-    left: 99px;
-}
-.pointer-red.last {
-    right: 0px;
-    left: 99px;
-}
-.pointer-bottom {
-    top: 0px;
-    bottom: 99px;
-}
-.pointer-top {
-    bottom: 0px;
-    top: 99px;
 }
 .banner-left {
     position: absolute;
