chore: 添加全局游戏进度

--- a/src/styles/checkerboard.less
+++ b/src/styles/checkerboard.less
@@ -1,6 +1,7 @@
 @import url(./base.less);
 
 #CheckerboardWrapper {
+    position: relative;
     width: 900px;
     height: 1000px;
     margin: 0px;
