--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -7,8 +7,7 @@
     z-index: 9999;
     width: @DashWidth;
     height: @DashHeight;
-    top: 50%;
-    margin-top: (-@DashHeight / 2);
+    top: 400px;
     left: 50%;
     margin-left: (-@DashWidth / 2 - 450px - @DashWidth / 2 - 30px);
     background-color: #e0be88;
